--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,14 +25,15 @@
         </activity>
         <activity android:name=".SignUpActivity" />
         <activity
-            android:name=".PerfilActivity"
-            android:label="@string/title_activity_perfil"
+            android:name=".FormActivity"
+            android:label="@string/title_activity_profile"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.lorenz.konrad.healtapp.MainActivity" />
         </activity>
+        
     </application>
 
 </manifest>
