--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.lorenz.konrad.healtapp"
         minSdkVersion 19
@@ -28,4 +29,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-database:11.0.4'
 }
