--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
-    compile 'com.google.firebase:firebase-database:11.0.4'
+    compile 'com.google.firebase:firebase-database:11.6.0'
+    compile 'com.google.android.gms:play-services-auth:11.6.0'
 }
